--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "project-solo",
   "version": "1.0.0",
-  "description": "'book quote storage app'",
+  "description": "book quote storage app",
   "main": "server/server.js",
   "scripts": {
+    "start": "webpack && nodemon server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"cross-env NODE_ENV=development webpack-dev-server --open --hot --progress --color \" \"nodemon ./server/server.js\""
   },
@@ -13,19 +14,26 @@
   },
   "author": "Paul Davey",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "pg": "^8.9.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^6.8.0",
+    "react-router-dom": "^6.8.0"
+  },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.2",
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
-    "express": "^4.18.2",
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.20",
-    "pg": "^8.9.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
     "style-loader": "^3.3.1",
-    "webpack": "^5.75.0"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
