--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "book quote storage app",
   "main": "server/server.js",
   "scripts": {
-    "start": "webpack && nodemon server/server.js",
+    "start": "NODE_ENV=production nodemon server/server.js",
+    "build": "NODE_ENV=production webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"cross-env NODE_ENV=development webpack-dev-server --open --hot --progress --color \" \"nodemon ./server/server.js\""
+    "dev": "concurrently \"cross-env NODE_ENV=development webpack-dev-server --open --hot --progress --color \" \"NODE_ENV=development nodemon ./server/server.js\""
   },
   "repository": {
     "type": "git",
