--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "author": "Paul Davey",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "pg": "^8.9.0",
+    "mongoose": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.8.0",
